<resources>
    <string name="welcome"><b>Let the SPEC magic begin.</b>\nStart bringing privacy and security to your online life and presence.\nEnter email and swipe arrow to generate keys.</string>
    <string name="company_text"><b>SPEC</b> ; HOLD THE KEY TO YOUR SECURITY.</string>
    <string name="drawer_open">Open navigation drawer.</string>
    <string name="drawer_close">Close navigation drawer.</string>
    <string name="app_name">SPEC</string>
    <string name="decrypt_explain">Decrypt message using barcode scanner, press button to scan:\n</string>
    <string name="encrypt_explain">Search contacts&#8230;</string>
    <string name="hint_msg">Enter message&#8230;</string>
    <string name="explain">SPEC Public Encryption Key.</string>
    <string name="ok">OK</string>
    <string name="hint_enter_your_name">name (optional)&#8230;</string>
    <string name="hint_enter_your_email">email&#8230;</string>
    <string name="wait_for_nfc_to_write">Tap NFC to securely store Private Decryption Key\n(provides additional security)</string>
    <string name="skip_save_to_phone">Skip and save key on device</string>
    <string name="explain_and_about">LEARN ABOUT SPEC</string>
    <string name="create_keys">Generate New Keys</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="failed">Failed</string>
    <string name="time_stamp">Time-stamp</string>
    <string name="session">Session</string>
    <string name="bad_data">Please scan again.</string>
    <string name="share_dialog">Share your Public Key&#8230;</string>
    <string name="send_dialog">Send encrypted message via&#8230;</string>
    <string name="cant_decrypt">This message hasn\'t been encrypted for you.</string>
    <string name="subject_encrypt">An encrypted message just for you - SPEC MOBILE APP</string>
    <string name="share_public_descripton">My Public Key:</string>
    <string name="fill_all">Please enter a valid email.\nThis email will enable other users to contact you.</string>
    <string name="subject_share">My Public Key - SPEC MOBILE APP</string>
    <string name="contact_exist">Contact already exists.</string>
    <string name="wait_for_nfc_to_read">Waiting for NFC&#8230;</string>
    <string name="what_to_share">What to share:</string>
    <string name="no_qr">No QR</string>
    <string name="share_button">Share</string>
    <string name="todo">SPEC Security</string>
    <string name="export">Export Keys</string>
    <string name="Import">Import Keys</string>
    <string name="clean">Delete App Data</string>
    <string name="choose_file_to_attach">Choose file to attach.</string>
    <string name="failed_attach_files">Could not retrieve files.</string>
    <string name="failed_to_create_files_to_send">Could not create files.</string>
    <string name="tag_written">Tag written successfully.</string>
    <string name="tag_needs_format">Tag doesn\'t have enough free space.</string>
    <string name="failed_read_only">Read-only tag.</string>
    <string name="cant_format">Unable to format tag to NDEF.</string>
    <string name="tag_not_supported">Tag doesn\'t appear to support NDEF format.</string>
    <string name="failed_to_write">Failed to write NFC tag.</string>
    <string name="qr_scan_explain">Place QR code within box to activate magic.</string>
    <string name="decrypting">Decrypting&#8230;</string>
    <string name="encrypting">Encrypting&#8230;</string>
    <string name="title_scan_error_msg">Please scan again.</string>
    <string name="content_scan_error_msg">Please scan again.</string>
    <string name="scan_contact_explain">Place QR code within box to add contact.</string>
    <string name="decrypt_qr_message_explain">Place QR code within box to read message.</string>
    <string name="title_turn_nfc_on">Activate NFC? If not, keys will be saved on device (LESS SECURE).</string>
    <string name="exit_by_back_notify">Press back again to exit.</string>
    <string name="edit_email">email: </string>
    <string name="edit_name">name: </string>
    <string name="editable_fields">Contact\'s Info:</string>
    <string name="not_editable_fields">Security Audit Info:</string>
    <string name="response">Respond</string>
    <string name="cant_find_an_app_to_open_file">Can\'t find proper app.</string>
    <string name="failed_to_create_file_to_open">Failed to create file.</string>
    <string name="described_what_going_to_be">SPEC CONTACT CARD</string>
    <string name="new_contact_to_add">Would you like to approve this contact?\nVerify that you trust the <b>email</b> below.\nAfter approval you\'ll be able to send this contact secure content.</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="save_changes_back_pressed">Would you like to save the changes?</string>
    <string name="verify_delete_msg">Are you sure you want to delete this contact?</string>
    <string name="clean_up">Clean up:</string>
    <string name="clear">Delete</string>
    <string name="not_cosen_clean">Please choose what to delete/clean.</string>
    <string name="turn_nfc_on_nfc_wait">NFC is OFF, go to settings and turn it ON.</string>
    <string name="no_contacts">"You don\'t have any contacts.\nTo <b>add contacts</b>, share your Public Key under My SPEC, scan a contact\'s QR code or ask a contact to send you their Public Key (Contact Card) to your email.</string>
    <string name="tmp_files_deleted">Temp files successfully deleted.</string>
    <string name="keys_deleted">Keys successfully deleted.</string>
    <string name="contacts_deleted">Contacts successfully deleted.</string>
    <string name="add_contact_first">Add this contact to your CONTACTS LIST first (press addition button).</string>
    <string name="hash_explain">The main application of secure cryptographic hashes is verification of message integrity - determining whether any changes have been made to a message or a file. SPEC verifies that your messages are secure and complete. WE FIGHT DATA TAMPERING 24/7.</string>
    <string name="what_is_hash">What is a Crypto Hash?</string>
    <string name="what_is_session">What is a Session ID?</string>
    <string name="session_explain">A session identifier or session token is a piece
        of data that is used in network communications to identify a session, a series of related
        message exchanges. In SPEC, we want you to be sure that you\'re in touch with the correct contact and not a malicous impersonator. Therefore it is vital to keep track of the current state of the conversation and a session ID is one way to achieve that goal.</string>
    <string name="what_is_replay">What is a Replay Attack?</string>
    <string name="replay_explain">A replay attack is a form of network attack in which a valid data transmission is
        maliciously or fraudulently repeated or delayed (after it has been possibly tampered with). This is mostly carried out by an adversary
        whom intercepts the data and retransmits it, possibly as part of a Man in the Middle Attack. SPEC verifies that this type of attack and similar ones aren\'t carried out.</string>
    <string name="no_result">Can\'t find contact</string>
    <string name="share_contact_subject">Shared Contact Card, Recommendation - SPEC MOBILE APP</string>
    <string name="quick_msg">Quick Text Message:</string>
    <string name="file_name_shared_contact_card">SharedContactCard.SPEC</string>
    <string name="file_name_friends_qr">SharedQR.SPEC.png</string>
    <string name="file_name_my_public_key">ContactCard.SPEC</string>
    <string name="file_name_my_qr_key">ContactCardQR.SPEC.png</string>
    <string name="file_name_secure_msg">SecureMessage.SPEC</string>
    <string name="file_name_qr_msg">SecureQRMessage.SPEC.png</string>
    <string name="file_to_big">Sorry.\nCan\'t attach file.\nCurrent limit is 50 MB.</string>
    <string name="file_is_empty">File is empty</string>
    <string name="notify_msg_deleted">Message has been deleted</string>
    <string name="send_another_msg">Send another message</string>
    <string name="send_orders">Sending a message:\n------\n1. Choose contact\n2. Enter message\n3. Add file (optional)</string>
    <string name="backup_profile">Backup Profile</string>
    <string name="share_file">share file via:</string>
    <string name="restore_profile">Restore Profile</string>
    <string name="my_details">My Details</string>
    <string name="share_image">share QR code via:</string>
    <string name="explain_button">Explain</string>
    <string name="edit_contact_title_pbk">public key:</string>
    <string name="both_qr_file">send both file and QR code via:</string>
    <string name="files_details">file details:</string>
    <string name="technical_info">Security Audit Info</string>
    <string name="cant_connect_nfc_adapter">Something went wrong</string>
    <string name="no_result_filter">No result, please search again</string>
    <string name="profile_my_name">my name:</string>
    <string name="profile_my_email">my email:</string>
    <string name="send_file">send file via:</string>
    <string name="send_image">send QR code via:</string>
    <string name="hash_title">Crypto Hash Info:</string>
    <string name="session_title">Session ID Info:</string>
    <string name="replay_title">Replay Attack Info:</string>
    <string name="too_short_name">Name should be at least 3 characters long</string>
    <string name="contact_with_same_email_exist">A contact with the same email already exists.\nDo you want to update their Public Encryption Key?</string>
    <string name="session_ok_explain">You both have the same session, so you\'re communicating with the same person as before.</string>
    <string name="dont_trust_session_explain">You have a different session than your contact.
        \nIt\'s possible that your contact is a fake, fraud.
        \nYour session is:\n</string>
    <string name="new_session_trust_created">Your communications are secure, you\'ve seen this contact before.\n</string>
    <string name="starting_session_explain">You have your contact\'s session,
        so it\'s probably the same person who sent you the previous message.</string>
    <string name="unknown_session_explain">First time you\'re receiving a message from this contact, verify identity (email).\n</string>
    <string name="not_implmented_local_files">not implemented yet.\nthis is where you\'ll be able to explore your local encrypted files</string>
    <string name="quote">Quote conversation</string>
    <string name="divide_msg">\n - - - \n</string>
    <string name="quote_msg">Conversation:</string>
    <string name="learn_title">The SPEC Magic</string>
    <string name="how_spec">How SPEC Works</string>
    <string name="faq">FAQs</string>
    <string name="blog">SPEC Blog</string>
    <string name="contact_spec">Contact specularX</string>
    <string name="replace_keys_title">Generate New Keys</string>
    <string name="first_text">If you generate new keys, you will lose access to previous data that was encrypted with your Public Key. Think about it before pressing Next.</string>
    <string name="confirm_first"><b>Next</b></string>
    <string name="first_step"><b>1<sup>st</sup></b></string>
    <string name="sec_step"><b>2<sup>nd</sup></b></string>
    <string name="last_step"><b>Final Step</b></string>
    <string name="second_text">Please verify that you understand the risk before continuing. You will not be able to decrypt and read previous data.</string>
    <string name="third_text">There is no going back if you change your keys (in current Beta version).</string>
    <string name="got_it"><b>Got It</b></string>
    <string name="send_report_message_dialog">Unexpected error. Would you like to send an error report to SPEC?\nThank you</string>
    <string name="send_report_button">Send</string>
    <string name="dont_send_now">Not now</string>
</resources>