<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:attr/dialogTheme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/default_gap">

    <TextView
        android:text="@string/replace_keys_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/spec_dark_blue" />

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first_step" />

        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sec_step" />
        <TextView
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_step" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_titles"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp">
        <View
            android:visibility="visible"
            android:background="@color/spec_blue"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <View
            android:visibility="invisible"
            android:background="@color/spec_blue"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <View
            android:visibility="invisible"
            android:background="@color/spec_blue"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_text" />

        <Button
            android:id="@+id/next"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirm_first" />
    </LinearLayout>
</LinearLayout>