<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:alpha="0"
    android:id="@+id/create_new_keys"
    android:padding="37dp">

    <TextView
        android:textSize="19sp"
        android:text="@string/welcome"
        android:layout_marginTop="10dp"
        android:textColor="@color/spec_black"
        android:padding="@dimen/default_gap"
        android:id="@+id/welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_your_name"
            android:inputType="textPersonName"
            android:padding="@dimen/default_gap"
            android:textColor="@color/spec_black"
            android:textColorHint="@color/spec_gray" />

        <EditText
            android:maxLength="40"
            android:textColor="@color/spec_black"
            android:textColorHint="@color/spec_gray"
            android:padding="@dimen/default_gap"
            android:id="@+id/email"
            android:hint="@string/hint_enter_your_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <ImageView
            android:src="@drawable/swipe_create_keys"
            android:id="@+id/gesture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>
</LinearLayout>
