<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_contact"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:alpha="1"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/default_gap">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/editable_fields"
        android:textColor="@color/spec_gray"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/spec_blue" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:gravity="bottom"
                android:padding="@dimen/default_gap"
                android:text="@string/edit_name"
                android:textColor="@color/spec_black"
                android:textSize="15sp" />

            <EditText
                android:textCursorDrawable="@null"
                android:inputType="textPersonName"
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:autoText="false"
                android:gravity="bottom|start"
                android:minWidth="100dp"
                android:padding="@dimen/default_gap"
                android:textColor="@color/spec_black"
                android:textSize="15sp" />
            <ImageButton
                android:onClick="onClickEditContact"
                android:id="@+id/edit_name_icon"
                android:layout_column="2"
                android:layout_row="0"
                style="?android:attr/borderlessButtonStyle"
                android:src="@drawable/edit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:gravity="bottom"
                android:padding="@dimen/default_gap"
                android:text="@string/edit_email"
                android:textColor="@color/spec_black"
                android:textSize="14sp" />

            <EditText
                android:textCursorDrawable="@null"
                android:id="@+id/contact_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:inputType="textEmailAddress"
                android:gravity="bottom|start"
                android:minWidth="100dp"
                android:padding="@dimen/default_gap"
                android:textColor="@color/spec_black"
                android:textSize="15sp" />
            <ImageButton
                android:onClick="onClickEditContact"
                android:id="@+id/edit_email_icon"
                android:layout_column="2"
                android:layout_row="1"
                style="?android:attr/borderlessButtonStyle"
                android:src="@drawable/edit"/>
        </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/not_editable_fields"
        android:textColor="@color/spec_gray"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/spec_blue" />

    <TextView
        android:id="@+id/contact_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_gap"
        android:gravity="left"
        android:padding="@dimen/default_gap"
        android:textColor="@color/spec_black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingLeft="@dimen/default_gap"
        android:text="@string/edit_contact_title_pbk"
        android:textColor="@color/spec_black" />

    <TextView
        android:id="@+id/contact_pb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="@dimen/default_gap"
        android:textColor="@color/spec_black"
        android:textIsSelectable="true"
        android:textSize="11sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/default_gap"
        android:background="@color/spec_blue" />
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:padding="@dimen/default_gap"
        android:layout_weight="1"
        android:onClick="onClickEditContact"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/contact_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
    <LinearLayout
        android:padding="@dimen/default_gap"
        android:layout_gravity="right|center_vertical"
        android:id="@+id/ll_images"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/answer"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClickEditContact"
            android:src="@drawable/respond" />

        <ImageButton
            android:id="@+id/delete"
            android:onClick="onClickEditContact"
            style="?android:attr/borderlessButtonStyle"
            android:src="@drawable/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>


    <TextView
        android:id="@+id/contact_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <TextView
        android:id="@+id/contact_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/orig_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/orig_eamil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>
